<resources>
    <string name="app_name">dudhi</string>
    <string name="log">Login</string>
    <string name="us">username   </string>
    <string name="pw">password</string>
    <string name="fp">forget password?</string>
    <string name="signup">Signup</string>
    <string name="email">email</string>
    <string name="name">Name</string>
    <string name="DOB">DOB</string>
    <string name="hname">🄴🅇🄰🄼 🄴🄳🄶🄴</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="enter_name">enter name</string>
    <string name="enter_email">enter Email</string>
    <string name="enter_username">enter username</string>
    <string name="enter_password">enter password</string>
    <string name="enter_your_goal">Enter your Goal</string>
    <string name="tnpsc">TNPSC</string>
    <string name="phonenum">phonenum</string>
    <string name="hello_constraintlayout">ConstraintLayout!</string>
    <string name="click_me">Click Me</string>
    <string name="hello_relativelayout">Hello, RelativeLayout!</string>
    <string name="submit">submit</string>
    <string name="hello_framelayout">Hello, FrameLayout!</string>
    <string name="login">Click Me</string>
    <string name="Tnpsc">COURSES</string>
    <string name="UPSC">UPSC</string>
    <string name="RRB">RRB</string>
    <string name="test">TEST SERIES</string>
    <string name="search_your_interest">search your interest</string>
    <string name="menu">menu</string>
    <string name="welcome_back_nsduthi">Welcome back \nSduthi</string>
    <string name="start_learning_newstuff">Start learning NewStuff</string>
    <string name="categories">categories</string>
    <string name="courses_in_progress">courses in progress</string>
    <string name="_10_hours_10_minutes">10 hours, 10 minutes</string>
    <string name="apititude">Apititude</string>
    <string name="aptitude_ntnpsc_ssc_rrb">Aptitude \nTNPSC,SSC,RRB</string>
    <string name="mathematics_ntnpsc_ssc_rrb">Mathematics \nTNPSC,SSC,RRB</string>
    <string name="general_studies_ntnpsc">General Studies \nTNPSC</string>
    <string name="courses_in_progresses">COURSES IN PROGRESS</string>
    <string name="pause">pause</string>
    <string name="stop">stop</string>
    <string name="enter_phone_number">ENTER PHONE NUMBER</string>
    <string name="enter_the_message">ENTER THE MESSAGE</string>
    <string name="send_sms">send SMS</string>
    <string name="comments">comments</string>
    <string name="add_comment">ADD COMMENT</string>
    <string name="type_your_comment">Type your comment</string>
    <string name="back">back</string>
    <string name="polity">polity</string>
    <string name="submitt">Submit</string>
    <string name="enter_country">Enter country</string>
    <string name="country">Country:</string>
    <string name="student_enrollment_form">Student Enrollment Form</string>
    <string name="names">Name:</string>
    <string name="enter_namee">Enter name</string>
    <string name="gender">Gender:</string>
    <string name="enter_gender">Enter gender</string>
    <string name="offline_courses_section">offline courses section</string>
    <string name="enrollment">Enrollment</string>
    <string name="sms">SMS</string>
    <string name="available_courses">AVAILABLE COURSES</string>
    <string name="available">Available Courses</string>
    <string name="back_to_home">Back to home</string>

</resources>