<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg14"
    android:layout_gravity="center"
    android:id="@+id/content">

    <TextView

        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/hname"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/my_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/LightBlue"
        android:layout_marginTop="20dp"
        android:text="@string/enrollment"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/my_but"
        android:layout_width="200dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        android:text="@string/available"
        android:layout_gravity="center"/>


    <Button
        android:id="@+id/smss"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/LightBlue"
        android:text="@string/sms"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>



    <Button
        android:id="@+id/h_back"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#938D8D"
        android:text="@string/back_to_home"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>



</LinearLayout>