<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/vbg13"
    android:id="@+id/register">



    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:width="200dp"
        android:background="@drawable/bg"
        android:hint="@string/enter_email"
        android:padding="5dp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:width="200dp"
        android:background="@drawable/bg"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_name"
        android:padding="5dp"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:width="200dp"
        android:background="@drawable/bg"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_username"
        android:padding="5dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:width="200dp"
        android:background="@drawable/bg"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_password"
        android:padding="5dp" />

    <Button
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#2E2B2B"
        android:layout_marginTop="20dp"
        android:text="@string/signup"
        android:width="300dp"/>

</LinearLayout>