<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/bg13"
    android:id="@+id/main">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/hname"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:layout_marginTop="40dp"
        android:textStyle="bold"/>


    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/white">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/username"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/editText_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="150dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/white">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/editText_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="150dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"

        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/log"
        android:id="@+id/button_login"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:width="300dp"/>
    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:width="300dp"/>


</LinearLayout>

