<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sms"
    android:gravity="center"
    android:padding="15sp"
    android:id="@+id/sms"
    android:background="@drawable/bg12">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:hint="@string/enter_phone_number"
        android:id="@+id/phonenum"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_the_message"
        android:id="@+id/smss"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:id="@+id/smsbutton"
        android:textAllCaps="false"
        android:layout_marginTop="30dp"
        android:text="@string/send_sms"/>



    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:padding="15dp">

        <ImageView
            android:id="@+id/s_home"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/home5"/>

        <ImageView
            android:id="@+id/s_back"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="230dp"
            android:src="@drawable/arrow6"/>


    </LinearLayout>



</LinearLayout>